--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^9.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^25.0.3",
